Use spotless to format java, yml and sql files